@@ -3,6 +3,7 @@ Revision history for perl distribution DBIx-TempDB
 0.04 Not Released
  - Add support for "template"
  - Add drop_from_child=2, which monitor parent with a double forked process
+ - Fix max length for database name is 63 characters (Pg=63, MySQL=64)
 
 0.03 2015-09-17T21:59:16+0200
  - Add support for "drop_from_child"
